--- a/CS1.ipynb
+++ b/CS1.ipynb
@@ -19,9 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/casparvaneck/Desktop/DA/DISKLAB-HE-2024-main/disklab/disk2d.py:9: UserWarning: Importing diskvertical was successful, but 2D radiative diffusion not available, because diffusion.f90 has not been compiled to diffusion.so. All other methods of diskvertical.py remain available. For full functionality type make in disklab directory, which should produce the diffusion.so library using f2py.\n",
+      "  warnings.warn(\"Importing diskvertical was successful, but 2D radiative diffusion not available, because diffusion.f90 has not been compiled to diffusion.so. All other methods of diskvertical.py remain available. For full functionality type make in disklab directory, which should produce the diffusion.so library using f2py.\")\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -32,7 +41,6 @@
     "MBH = 5 * MS          # Black hole mass (5 times the solar mass)\n",
     "R_in  = 0.1 * AU      # Inner radius of the disk\n",
     "R_out = 1 * AU        # Outer radius of the disk\n",
-    "\n",
     "alpha_num = 0.01      # Viscosity parameter\n",
     "\n",
     "# Initialize the disk radial model with the specified parameters\n",
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
